@@ -24,8 +24,8 @@
     <ClCompile Include="..\..\..\imgui\imgui_draw.cpp" />
     <ClCompile Include="..\..\..\imgui\imgui_tables.cpp" />
     <ClCompile Include="..\..\..\imgui\imgui_widgets.cpp" />
-    <ClCompile Include="..\..\generated\cimgui.cpp" />
-    <ClCompile Include="..\..\generated\cimgui_internal.cpp" />
+    <ClCompile Include="..\..\generated\dcimgui.cpp" />
+    <ClCompile Include="..\..\generated\dcimgui_internal.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\imgui\imgui.h" />
@@ -33,8 +33,8 @@
     <ClInclude Include="..\..\..\imgui\imstb_rectpack.h" />
     <ClInclude Include="..\..\..\imgui\imstb_textedit.h" />
     <ClInclude Include="..\..\..\imgui\imstb_truetype.h" />
-    <ClInclude Include="..\..\generated\cimgui.h" />
-    <ClInclude Include="..\..\generated\cimgui_internal.h" />
+    <ClInclude Include="..\..\generated\dcimgui.h" />
+    <ClInclude Include="..\..\generated\dcimgui_internal.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
