@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source">
@@ -6,7 +6,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\generated\cimgui.cpp">
+    <ClCompile Include="..\..\generated\dcimgui.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\imgui\imgui.cpp">
@@ -24,12 +24,12 @@
     <ClCompile Include="..\..\..\imgui\imgui_widgets.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\generated\cimgui_internal.cpp">
+    <ClCompile Include="..\..\generated\dcimgui_internal.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\generated\cimgui.h">
+    <ClInclude Include="..\..\generated\dcimgui.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\imgui\imgui.h">
@@ -47,7 +47,7 @@
     <ClInclude Include="..\..\..\imgui\imstb_truetype.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\generated\cimgui_internal.h">
+    <ClInclude Include="..\..\generated\dcimgui_internal.h">
       <Filter>Source</Filter>
     </ClInclude>
   </ItemGroup>
