@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source">
@@ -13,10 +13,10 @@
     <ClCompile Include="..\..\..\imgui\backends\imgui_impl_sdl2.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\generated\backends\cimgui_impl_opengl2.cpp">
+    <ClCompile Include="..\..\generated\backends\dcimgui_impl_opengl2.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\generated\backends\cimgui_impl_sdl2.cpp">
+    <ClCompile Include="..\..\generated\backends\dcimgui_impl_sdl2.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="main.c">
@@ -30,10 +30,10 @@
     <ClInclude Include="..\..\..\imgui\backends\imgui_impl_sdl2.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\generated\backends\cimgui_impl_opengl2.h">
+    <ClInclude Include="..\..\generated\backends\dcimgui_impl_opengl2.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\generated\backends\cimgui_impl_sdl2.h">
+    <ClInclude Include="..\..\generated\backends\dcimgui_impl_sdl2.h">
       <Filter>Source</Filter>
     </ClInclude>
   </ItemGroup>
