@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source">
@@ -9,10 +9,10 @@
     <ClCompile Include="main.c">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\generated\backends\cimgui_impl_dx9.cpp">
+    <ClCompile Include="..\..\generated\backends\dcimgui_impl_dx9.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\generated\backends\cimgui_impl_win32.cpp">
+    <ClCompile Include="..\..\generated\backends\dcimgui_impl_win32.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\imgui\backends\imgui_impl_dx9.cpp">
@@ -23,13 +23,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\generated\cimgui.h">
+    <ClInclude Include="..\..\generated\dcimgui.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\generated\backends\cimgui_impl_dx9.h">
+    <ClInclude Include="..\..\generated\backends\dcimgui_impl_dx9.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\generated\backends\cimgui_impl_win32.h">
+    <ClInclude Include="..\..\generated\backends\dcimgui_impl_win32.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\imgui\backends\imgui_impl_dx9.h">
